@@ -374,17 +374,27 @@ $(function () {
       
      asyncTest("'display' callback", function () {
         var newText = 'cd<e>;"',
-            e = $('<a href="#" data-pk="1" data-url="post.php" data-name="text1">abc</a>').appendTo(fx).editable({
+            counter = 0,
+            initialVal = 'abc',
+            e = $('<a href="#" data-pk="1" data-url="post.php" data-name="text1">123</a>').appendTo(fx).editable({
               ajaxOptions: {
                  dataType: 'json'
               },
               display: function(value, response) {
-                 ok(this === e[0], 'scope is ok');
-                 ok(response.success, 'response param ok');
-                 $(this).text('qq'+value);
-             } 
-          });  
+                 if(counter === 0) {
+                     ok(response === undefined, 'initial autotext ok as display is func');
+                     $(this).text(initialVal);
+                 } else {
+                     ok(this === e[0], 'updating, scope is ok');
+                     ok(response.success, 'response param ok');
+                     $(this).text('qq'+value);
+                 }
+                 counter++;
+              } 
+            });  
 
+        equal(e.text(), initialVal, 'initial autotext ok');  
+          
         e.click()
         var p = tip(e);
 
